# AsciiJuke

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt  makefile  premake5.lua
dep/: main.d
dependencies/: CMakeLists.txt
inc/: miniaudio.h
pch/: flac.h.gch  wav.h.gch
src/: main.c
src/audio/: streaming.c  streaming.h
src/audio/flac/: expected.txt  flac.c  flac.h  makefile
src/audio/mp3/: Makefile  example.c  helper.c  mp3.h
src/audio/ogg/: ogg.c  ogg.h
src/audio/wav/: wav.c  wav.h  wav_datasource.c  wav_datasource.h
src/flac/: example1.flac  flac.c  flac.h
src/fs/: filesystem.h  filesystem_unix.c
src/utils/: endians.c  endians.h  errorMacro.h
